--- a/source/_posts/第五-比例尺与坐标轴.md
+++ b/source/_posts/第五-比例尺与坐标轴.md
@@ -4,14 +4,66 @@ title: '第五:比例尺与坐标轴'
 date: 2021-06-19 17:10:45
 tags: D3.js
 ---
+## 比例尺与坐标轴
 
-### <div id="class02-01">01、线性比例尺</div>
+### <div id="class02-01">01、定量比例尺</div>
 
 D3中提供了多种的比例尺，但是都逃不开需要给定domain(定义域) 和 range(值域)。 最常用的是线性比例尺最标准的用法， 使用如下:
 ```javascript
 import * as d3 from 'd3';
-let linear = scaleLinear().domain([0, 500]).range([0, 100]);
+let linear = d3.scale.linear().domain([0, 500]).range([0, 100]);
 console.log(linear(50));            // 结果10
 console.log(linear(250));           // 结果50
 console.log(linear(450));           // 结果90
+```
+
+#### 线性比例尺 scale.linear()
+```typescript
+import * as d3 from 'd3';
+let linear = d3.scale.linear().domain([0, 500]).range([0, 100]);
+```
+
+api | 说明
+:- | :-
+linear(x) | 输入定义域，返回值域
+linear.invert(y) | 输入值域， 返回定义域
+linear.domain([numbers]) | 设定或者获取定义域
+linear.range([values]) | 设定或者获取值域
+linear.rangeRound([values]) | 可以代替range() 使用，比例尺的输出值会进行四舍五入的计算， 结果为整数
+linear.clamp([boolean]) | 默认false, 超出范围会按照比例得到一个超出范围的值。 如果设置为true, 那么超出范围的值，会压缩到范围内。
+linear.nice([count]) | 可以将定义域的范围自动扩展为较为理想的范围。
+linear.ticks([count]) | 设定或者获取比较有代表性的值的数目。默认为10， 主要获取坐标轴的刻度。
+linear.tickFormat(count [, format]) | 设定定义域内具有代表性的值的表示形式。比如显示到小数点后两位，适用百分比例行使现实数据。
+
+使用示例
+```javascript
+import * as d3 from 'd3';
+let linear = d3.scale.linear().domain([0,20])/range([0,100]); // 定义域&值域
+console.log(linear(10)); // 定义域=10，结果50
+console.log(linear(20)); // 定义域=20，结果100
+console.log(linear(30)); // 定义域=30，结果150
+consoel.log(linear.invert(80)); // 反向转化 结果=80. 定义域16
+
+// 如果不希望超出范围
+linear.clamp(true);
+console.log(linear(30)); // 即使超出，结果也是100
+
+
+// 如果希望取值域四舍五入
+linear.rangeRound([0,100]);
+console.log(linear(13.33)); // 定义域=13.33 ，结果四舍五入67
+
+// 理想化定义域（待续写）
+
+//ticks()和 ticksFormat()
+let linear = d3.scale.linear().domain([-20,20]).range([0,100]);
+console.log(linear.ticks(5)); // [-20,-10,0,10,20]
+
+let tickFormat = linear.tickFormat(5,"+"); // 用来格式化tick的值（也可以加 + % $ )等
+
+ticks.map(function(item, index) {
+    ticks[index] = tickFormat(ticks[index]);
+});
+
+console.log(ticks); // ["-20", "-10", "+0", "+10", "+20"]
 ```
