feat: 比例尺与坐标轴2

--- a/source/_posts/第五-比例尺与坐标轴.md
+++ b/source/_posts/第五-比例尺与坐标轴.md
@@ -67,3 +67,50 @@ ticks.map(function(item, index) {
 
 console.log(ticks); // ["-20", "-10", "+0", "+10", "+20"]
 ```
+
+#### 指数和对数比例尺 scale.scalePow() | scale.scaleLog()
+scalePow() | scaleLog() 这两个标尺和线性比例尺拥有的api是一模一样的。 指数标尺多了一个属性 exponent() 用于指定指数。 对数标尺对了一个 base() 用于指定对数
+
+指数对数定义科普^_^
+{% asset_img 指数对数定义.png %}
+
+使用示例
+```javascript
+let pow = d3.scale.pow().exponent(3);
+pow(2) // 8
+pow(3) // 27
+
+pow.exponent(0.5);  // 相当于开根号
+pow(2) // 1.414
+pow(3) // 1.732
+
+/*
+* 指数标尺使得定义域相对的可以说是扩展为了[0, 3*3*3] = [0, 27]
+* 相对于pow(1.5) 就是 3.375
+* 相当于 对应的线性比例尺的结果
+* let linear = scaleLinear().domain([0, 27]).range([0, 90]);
+* console.log(linear(3.375));     // 11.25
+* */
+pow.exponent(3)
+    .domain([0, 3])
+    .range([0, 90]);
+console.log(pow(1.5))           // 11.25
+```
+
+#### 量子比例尺和分位比例尺 scale.quantize() | scale.quantile()
+quantize()
+定义域是连续的：[0,10]
+值域是离散的：['white', 'red', 'blue', 'black', 'yellow']
+quantile()
+和quantize类似，唯一的区别是定义域量子比例尺定义域只关心开始和结束，中间加多少都没关系[0,1,2,3,10]它只等于[0,10];分位比例尺每个间隔都对应离散数列
+
+使用示例
+```javascript
+let quantize = d3.scale.quantize().domain([0, 10]).range(['white', 'red', 'blue', 'black', 'yellow']);
+console.log(quantize(7))
+
+let quantile = d3.scale.quantile().domain([1,3,6]).range(['white', 'red', 'blue', 'black', 'yellow']);
+console.log(quantize(2)) // bulue 1和3之间对应['white', 'red', 'blue', 'black', 'yellow']
+```
+
+#### 阈值
