feat:序数比例尺-颜色

--- a/source/_posts/第五-比例尺与坐标轴.md
+++ b/source/_posts/第五-比例尺与坐标轴.md
@@ -104,7 +104,7 @@ quantize()
 quantile()
 和quantize类似，唯一的区别是定义域量子比例尺定义域只关心开始和结束，中间加多少都没关系[0,1,2,3,10]它只等于[0,10];分位比例尺每个间隔都对应离散数列
 
-使用示例
+quantize()|quantile() 使用示例
 ```javascript
 let quantize = d3.scale.quantize().domain([0, 10]).range(['white', 'red', 'blue', 'black', 'yellow']);
 console.log(quantize(7))
@@ -113,4 +113,62 @@ let quantile = d3.scale.quantile().domain([1,3,6]).range(['white', 'red', 'blue'
 console.log(quantize(2)) // bulue 1和3之间对应['white', 'red', 'blue', 'black', 'yellow']
 ```
 
-#### 阈值
+#### 阈值scale.threshold()
+将连续的定义域，映射到值域中去 和量子比例尺、分位比例尺类似
+
+threshold() 使用示例
+```javascript
+// 定义了3个阈值，被分割成四段[-∞,10],[10,20],[20,30],[30,+∞]，并且值映射到值域['red','blue','green','black']中去
+let threshold = d3.scale.threshold().domain([10,20,30]).range(['red','blue','green','black']);
+console.log(threshold(9)) // red
+```
+
+<br/>
+
+### <div id="class02-01">02、序数比例尺scale.ordinal</div>
+<font color='red'>序数比例尺是定义域、值域都是离散的</font>
+定义域和值域一一对应，且超过部分获取值域的第一个
+
+ordinal() 使用示例
+```javascript
+let ordinal = d3.scale.ordinal().domain(['1', '2', '3', '4', '5']).range([10, 20, 30, 40, 50]);
+console.log(ordinal('1'));              // 10
+console.log(ordinal('2'));              // 20
+console.log(ordinal('3'));              // 30
+console.log(ordinal('4'));              // 40
+console.log(ordinal('5'));              // 50
+console.log(ordinal('10'));              // 10
+```
+
+#### 颜色比例尺
+序号比例尺的一种
+
+api | 说明
+:- | :-
+d3.scale.category10() | 10种颜色
+d3.scale.category20() | 20种颜色
+d3.scale.category20b() | 20种颜色
+d3.scale.category20c() | 20种颜色
+
+```javascript
+let width = 600;
+let height = 600;
+let dataSet = d3.range(5); // [0,1,2,3,4,5]
+
+let color = d3.scale.category10(); // 设置颜色
+
+let svg = d3.select("body").append('svg')
+            .attr('width',width)
+            .attr('height',height);
+
+let circle = svg.selectAll('circle')
+                .data(dataSet)
+                .enter()
+                .append('circle')
+                .attr('cx',(d,i)=>30+i*80)
+                .attr('cy',(d,i)=>100)
+                .attr('r',30)
+                .attr('fill',(_,i) =>color(i));
+```
+
+
