feat:序数比例尺2

--- a/source/_posts/第五-比例尺与坐标轴.md
+++ b/source/_posts/第五-比例尺与坐标轴.md
@@ -139,6 +139,20 @@ console.log(ordinal('4'));              // 40
 console.log(ordinal('5'));              // 50
 console.log(ordinal('10'));              // 10
 ```
+ordinalPoints() 一个一个定义太麻烦，所以用ordinalPoints()设置连续的值域，来对应定义域上的值
+
+使用示例
+```javascript
+let ordinal = d3.scale.ordinal().domain(['1','2','3','4','5']).rangePoints([0,100]);
+console.log(ordinal.range()); // [0,25,50,75,100]
+console.log(ordinal(1)); // 0
+console.log(ordinal(3)); //50
+```
+ordinalPoints()有两个参数 interval,padding， 间隔|边距
+
+记住这张图
+{% asset_img ordinalPadding.png %}
+
 
 #### 颜色比例尺
 序号比例尺的一种
@@ -170,5 +184,3 @@ let circle = svg.selectAll('circle')
                 .attr('r',30)
                 .attr('fill',(_,i) =>color(i));
 ```
-
-
