--- a/source/_posts/第五-比例尺与坐标轴.md
+++ b/source/_posts/第五-比例尺与坐标轴.md
@@ -4,7 +4,7 @@ title: '第五:比例尺'
 date: 2021-06-19 17:10:45
 tags: D3.js
 ---
-## 比例尺与坐标轴
+## 比例尺
 
 ### <div id="class02-01">01、定量比例尺</div>
 
@@ -137,7 +137,7 @@ console.log(ordinal('2'));              // 20
 console.log(ordinal('3'));              // 30
 console.log(ordinal('4'));              // 40
 console.log(ordinal('5'));              // 50
-console.log(ordinal('10'));              // 10
+console.log(ordinal('10'));             // 10
 ```
 ordinalPoints() 一个一个定义太麻烦，所以用ordinalPoints()设置连续的值域，来对应定义域上的值
 
