--- a/source/_posts/第七-绘图.md
+++ b/source/_posts/第七-绘图.md
@@ -68,5 +68,42 @@ line.y([y])| 设置y坐标值
 curve([curve])| 曲线类型 具体有哪些插值模式，[官方api](https://github.com/xswei/d3js_doc/blob/master/API_Reference/API.md#curves)
 
 
+### 02、area
+
+api | 说明
+:- | :-
+x  | 横坐标
+y  | 纵坐标
+y0 | 底部y坐标
+y1 | 顶部y坐标
+x0 | 和y0类似
+x1 | 和y1类似
+
+```typescript
+let height:number = 600;
+let width:number = 600;
+let svg = d3.select('body').append('svg')
+    .attr('height', 600)
+    .attr('width', 600);
 
 
+let dataSet: [number, number][] = [[80, 80], [120, 120], [130, 130], [70, 70], [60, 60], [90, 90]];
+
+// 创建一个区域生成器
+let areaPath = d3.area()
+    .x((d: [number, number], i: number) => {
+        return 50 + i * 60;
+    })
+    .y0((d: [number, number], i: number) => {
+        return height / 2;
+    })
+    .y1((d: [number, number], i: number) => {
+        return height / 2 - d[0];
+    });
+
+svg.append('path')
+    .attr('d', areaPath(dataSet))
+    .attr('stroke', 'black')
+    .attr('stroke-width', '3px')
+    .attr('fill', '#eee');
+```
