feat: 第八-坐标轴

--- a/source/_posts/第七-绘图.md
+++ b/source/_posts/第七-绘图.md
@@ -107,3 +107,75 @@ svg.append('path')
     .attr('stroke-width', '3px')
     .attr('fill', '#eee');
 ```
+
+<br/>
+
+### 03、arc 弧线
+
+方法一：
+```typescript
+// 弧参数
+let dataSet: DefaultArcObject = {
+    startAngle: 0,
+    endAngle: Math.PI * .75,
+    innerRadius: 50,
+    outerRadius: 100
+};
+// 创建弧形生成器
+let arcPath = arc();
+// 添加路径
+this.svg.append('path')
+    .attr('d', arcPath(dataSet))
+    .attr('transform', `translate(250, 250)`)
+    .attr('stroke', 'black')
+    .attr('stroke-width', '3px')
+    .attr('fill', '#eee');
+```
+<br />
+
+方法二：
+```typescript
+// 创建弧形生成器
+let arcPath = arc().innerRadius(50).outerRadius(100).startAngle(0).endAngle(Math.PI *.75);
+// 添加路径
+this.svg.append('path')
+    .attr('d', arcPath)
+    .attr('transform', `translate(250, 250)`)
+    .attr('stroke', 'black')
+    .attr('stroke-width', '3px')
+    .attr('fill', '#eee');
+```
+
+### 04、symbol图形
+
+画一个星形
+```typescript
+let svg = d3.select('body')
+            .append('svg')
+            .attr('width',600)
+            .attr('height',600);
+
+let symbolPath = d3.symbol().type(d3.symbolStar).size(1000);
+svg.append('g')
+   .attr("transform", "translate(200,200)")
+   .append('path')
+   .attr('d',symbolPath)
+   .attr('fill','black')
+   .attr('stroke','red')
+   .attr('stroke-width','3px');
+```
+api | 说明
+:- | :-
+d3.symbolCross  | 十字
+d3.symbolDiamond  | 钻石
+d3.symbolSquare | 矩形
+d3.symbolStar | 星形
+d3.symbolTriangle | 三角形
+d3.symbolWye | Y形
+
+### 05、弦生成器（暂时略）
+
+### 06、对角线生成器（暂时略）
+
+
+
