--- a/source/_posts/第六-坐标轴.md
+++ b/source/_posts/第六-坐标轴.md
@@ -65,6 +65,7 @@ rAxis.call(rightAxis);
 rAxis2.call(rightAxis2);
 ```
 
+
 api | 说明
 :- | :-
 d3.axisTop(scale)| 为给定的刻度构造一个新的面向上的轴生成器，带空的刻度参数，刻度大小为6，填充为3。在这个方向上，刻度画在水平域路径之上。
@@ -79,5 +80,7 @@ axis.tickFormat([format])	| 设定或者获取坐标的单位
 axis.tickSize([size])	| 如果指定了大小，将内部和外部刻度大小设置为指定的值，并返回轴。如果没有指定大小，返回当前的内刻度大小，默认为6。
 axis.tickSizeInner([size])| 	设定或者获取坐标轴内部度的长度。内部度指的是非两端的刻度。
 axis.tickSizeOuter([size])| 设定或者获取外部度。 外部度值的是两端的刻度。
+
+<font color="red" size="3">这里要注意===> ticks是指分成几段; 设置值之后d3会根据轴最大最小值自动做整除，不能整除时取最近的被整除的数做为段数。</font>
 
 
