feat:第九-D3.js之动画part1

--- a/source/_posts/第八-折线图.md
+++ b/source/_posts/第八-折线图.md
@@ -1,5 +1,5 @@
 ---
-title: 第八-折线图
+title: 第八-D3.js之折线图
 date: 2021-06-26 23:34:29
 tags: D3.js
 ---
@@ -105,7 +105,4 @@ svg.append('g')
    .attr('transform',`translate(${padding.left}, ${padding.top})`)
    .call('yAxis');
 
-
-
 ```
-
