--- a/source/_posts/第九-动画.md
+++ b/source/_posts/第九-动画.md
@@ -6,7 +6,7 @@ tags: D3.js
 
 ## 动画
 
-### 过渡动画
+### 一 过渡动画
 <b>动画这一章比较有趣，同时d3的动画原理和css3的动画类似api也雷同。理解和掌握起来比较容易。</b>
 
 1、简单示例一：transition()、duration（）、delay() 生成一个从10到300的过渡动画
@@ -47,3 +47,193 @@ selection.transition([name]) | 过渡动画对象
 transition.delay([value]) |	延时
 transition.duration([value]) |	持续时间
 transition.ease([value]) |	缓动效果[easing动画](https://github.com/xswei/d3js_doc/blob/master/API_Reference/API.md#easings-d3-ease)
+
+<br />
+
+### 二 过渡属性
+
+<b size="4">transition.attrTween()</b> 手动执行自定义动画，可以更精确的控制属性的变化
+
+```typescript
+svg.append('rect')
+   .attr('fill','steelBlue')
+   .attr('x',10)
+   .attr('y',10)
+   .attr('width',0)
+   .attr('height',30)
+   .transition()
+   .delay(100)
+   .duration(2000)
+   .attrTween('width', (d: any, i: number, a: any)=> {
+        return (t: number)=> {
+            return t * 300;
+        }
+    });
+```
+
+API | 说明
+:- | :-
+selection.attrTween([name]) | d 是被绑定的数据， i 是数据索引， a 是变化到最后的元素selection。 返回值也是一个函数，t的取值范围是 [0,1], 0 开始变化， 1 变化结束。
+transition.styleTween([name]) | 和attrTween类似，负责样式的过渡动画
+
+
+<b size="4">transition.tween(name, factory)</b> 自定义过渡动画（补间动画）；第一个参数貌似没什么用，第二个参数是动画逻辑。
+
+tween() 示例：
+```typescript
+let width:number = 600;
+let height:number = 600;
+let svg = d3.select('body')
+            .append('svg')
+            .attr('width',width)
+            .attr('height',height);
+
+// 定义一个rect
+let rect = svg.append('rect')
+   .attr('fill','steelBlue')
+   .attr('x',10)
+   .attr('y',10)
+   .attr('width',100)
+   .attr('height',30);
+
+// 定义一个text
+let text = svg.append('text')
+              .attr('stroke','white')
+              .attr('y',15)
+              .attr('x',100)
+              .attr('dy','1em')
+              .attr('text-anchor','end');
+
+let textTrans = text
+    .transition()
+    .duration(2000)
+    .tween('text',  ()=> {
+        return (t)=> {
+             text.text(Math.floor( t * 300)) //  text值从1-300
+                 .attr('x', Math.floor(100+t * 300)); //x位置从100-400
+             rect.attr('width', Math.floor(100+t * 300))
+        }
+    })
+```
+
+<br/>
+
+**remove**
+remove()的用处是过渡动画结束之后删除被选择的元素。
+```typescript
+// 执行完之后删除rect元素
+rect.transaction()
+    .attr('width', 300)
+    .remove(); 
+```
+
+api | 说明
+:- | :- 
+transition.remove() | 过渡结束之后， 删除被选择的元素
+
+<br/>
+
+
+**子元素**
+
+子元素使用示例:          
+```typescript
+let dataSet: number[] = [100, 100, 100];
+
+let g = this.svg.append('g');
+
+let rect = g.selectAll('rect')
+    .data(dataSet)
+    .enter()
+    .append('rect')
+    .attr('fill', schemeCategory10[0])
+    .attr('id', function (d: number, i: number) {               // 给定给一个id　属性
+        return 'rect' + i;
+    })
+    .attr('x', 10)
+    .attr('y', function (d: number, i: number) {
+        return 10 + i * 35;
+    })
+    .attr('width', function (d: number, i: number) {
+        return d
+    })
+    .attr('height', 30);
+
+// 第二个元素添加过度效果
+g.transition()
+    .select('#rect1')
+    .attr('width', 300);
+
+//　全部过度
+g.transition()
+    .selectAll('rect')
+    .attr('width', 300);
+
+// 过滤器
+g.transition()
+    .selectAll('rect')
+    .filter(function (d: number, i: number) {
+        return i>=1;
+    })
+    .attr('width', 300)
+```
+<br/>
+
+api | 说明
+:- | :- 
+transition.select | 在选中的元素上指定一个过渡.
+transition.selectAll | 在指定的元素上指定一个过渡.
+transition.filter | 基于数据对元素进行过滤.
+
+### 三 时钟动画
+
+```css
+/* 定义样式 */
+.time {
+  font-family:cursive;
+  font-size:40px;
+  stroke:black;
+  stroke-width:2;
+}
+```
+
+```javascript
+let width = 600;
+let height = 600;
+let svg = d3.select('body')
+            .append('svg')
+            .attr('width',width)
+            .attr('height',height);
+
+// 获取时钟字符串
+const getTimeString =()=>{
+    let time = new Date();
+    let hours = time.getHours();
+    let minutes = time.getMinutes();
+    let seconds = time.getSeconds();
+
+    hours = hours < 10 ? `0${hours}`:hours;
+    minutes = minutes < 10 ? `0${minutes}`:minutes;
+    seconds = seconds < 10 ? `0${seconds}`:seconds;
+
+    return `${hours}:${minutes}:${seconds}`;
+};
+
+// 时钟元素
+let timeText = svg.append('text')
+                  .attr('x',250)
+                  .attr('y',240)
+                  .attr('class','time')
+                  .text(getTimeString());
+
+// 定时器动画
+setInterval(()=>{
+   timeText.text(getTimeString());
+},1000);
+
+```
+
+
+
+
+
