--- a/source/_posts/第十四D3之水波图组件.md
+++ b/source/_posts/第十四D3之水波图组件.md
@@ -8,8 +8,9 @@ tags: D3.js
 
 {% asset_img water.gif %}
 
-水波图效果即刻画水在容器中晃动引起的波浪效果。这里涉及到svg动画transition、css动画animation、svg遮罩标签mask
+* <a href="https://jsbin.com/kadijuf/edit?js,output" target="_blank">水波图例子</a>
 
+水波图效果即刻画水在容器中晃动引起的波浪效果。这里涉及到svg动画transition、css动画animation、svg遮罩标签mask 代码实现如下:
 ```javascript
 const width = 800;
 const height = 800;
